Fixing CSRF verification issue on form submission, attempting to remove label from textarea

--- a/templates/note_test.html
+++ b/templates/note_test.html
@@ -39,6 +39,7 @@
         <div class="footer-container">
             <footer class="wrapper">
                 <form method="post" action="">
+                    {% csrf_token %}
                     {{ formset }}
                     <input type="submit" value="Post">
                 </form>
